--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.2",
     "@astrojs/cloudflare": "^11.0.4",
+    "@astrojs/starlight": "^0.26.1",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.13.3",
     "tailwindcss": "^3.4.9",
