--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "2fa-authenticator.cl",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@9.7.1",
   "scripts": {
     "dev": "astro dev --host",
     "start": "astro dev",
