--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,3 +19,5 @@ jobs:
       - run: pnpm i --frozen-lockfile
       - run: pnpm build
       - run: pnpm run deploy
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
